version 1.9.1, in progress
- wls: amend the criterion for complaining that the weights
  are all zero
- Remove the old genpois function

05-02-2010 version 1.9.0
- New command: "duration", for estimation of parametric
  duration models (e.g. Weibull)
- New command: "negbin", for estimation of count data
  models using the Negative Binomial distribution
- poisson regression: add overdispersion test and also
  --robust option to get a QML covariance matrix
- New command modifier, "catch" to catch errors and
  permit continuation of script execution
- "labels" command: add options to write variable labels
  to file, and to read labels from file
- Consolidate commands: the old "graph" and "plot"
  commands (ASCII graphics) are unified in "textplot"
- Enable full-text search of "online" help files
- Enable help for specific "settable" variables, as in
  "help set lbfgs"
- "mread": search the gretl working directory if the
  file is not found at first
- "dataset sortby": allow the use of a list to specify 
  multiple sort keys
- ODBC import: enable extraction of multiple data series
  per SQL query
- ODBC: enable support in the binary packages for OS X
- Observation labels: permit non-ASCII UTF-8 characters
- Export of data to R, interactively: add a message
  confirming that the export worked
- "foreign" code blocks: add support for GNU Octave
- GUI: add export/import of variable labels
- GUI: enable choice of ordering for Cholesky decomposition
  for VAR impulse response plots
- GUI graph editor: add option to show a grid; add facility
  to display highlight bars in time-series graphs, e.g.
  NBER recession dates
- Filter functions movavg, bkfilt and hpfilt: offer
  greater control via additional optional arguments
- Add new functions, digamma, kdensity, monthlen and
  epochday (the latter two are calendrical) 
- Add new built-in constant: "macheps" gets the
  machine precision
- OS X package: add icons and associations for gretl data,
  script and session files