@@ -4658,10 +4658,7 @@ static int unlocalize_list (const char *lname, int status,
 	    STACK_LEVEL(pdinfo, vi) = upd;
 	}
     } else if (status == LIST_WAS_TEMP) {
-	int err = delete_list_by_name(lname);
-#if 0
-	fprintf(stderr, "delete_list_by_name: '%s': err=%d\n", lname, err);
-#endif
+	delete_list_by_name(lname);
     }
 
     return 0;
